--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.clevertap</groupId>
     <artifactId>supertest-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.8</version>
-         <description>A wrapper for Maven's Surefire Plugin, with advanced re-run capabilities.</description>
-         <name>supertest-maven-plugin</name>
-         <url>https://github.com/CleverTap/supertest-maven-plugin</url>
+    <version>1.10</version>
+    <description>A wrapper for Maven's Surefire Plugin, with advanced re-run capabilities.
+    </description>
+    <name>supertest-maven-plugin</name>
+    <url>https://github.com/CleverTap/supertest-maven-plugin</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -133,33 +134,33 @@
                 </plugins>
             </build>
         </profile>
-             <profile>
-             <id>gpg_verify</id>
-             <build>
-                 <plugins>
-                     <plugin>
-                         <groupId>org.apache.maven.plugins</groupId>
-                         <artifactId>maven-gpg-plugin</artifactId>
-                         <version>1.5</version>
-                         <configuration>
-                             <gpgArguments>
-                                 <arg>--pinentry-mode</arg>
-                                 <arg>loopback</arg>
-                             </gpgArguments>
-                         </configuration>
-                         <executions>
-                             <execution>
-                                 <id>sign-artifacts</id>
-                                 <phase>verify</phase>
-                                 <goals>
-                                     <goal>sign</goal>
-                                 </goals>
-                             </execution>
-                         </executions>
-                     </plugin>
-                 </plugins>
-             </build>
-         </profile>
+        <profile>
+            <id>gpg_verify</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <developers>
